# usb2

./: Cargo.toml  README.md
src/: bmrequesttype.rs  brequest.rs  cdc.rs  configuration.rs  desc.rs  device.rs  endpoint.rs  feature.rs  hid.rs  ia.rs  interface.rs  lib.rs  macros.rs
src/cdc/: acm.rs  call.rs  header.rs  union.rs
